--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,32 +37,32 @@ target_include_directories(arbd_lib
 )
 
 # --- Compile Definitions & Options for the Library ---
-if(ARBD_USE_LOGGER) # Option from parent scope
-    target_compile_definitions(arbd_lib PRIVATE ARBD_USE_LOGGER)
+if(USE_LOGGER) # Option from parent scope
+    target_compile_definitions(arbd_lib PRIVATE USE_LOGGER)
     # SPDLOG_ACTIVE_LEVEL is also set at the executable level,
     # but if libarbd uses it directly, it might need it here too.
     # target_compile_definitions(arbd_lib PRIVATE SPDLOG_ACTIVE_LEVEL=${ARBD_SPDLOG_LEVEL})
 endif()
 
-if(ARBD_USE_NVTX) # Option from parent scope
-    target_compile_definitions(arbd_lib PRIVATE ARBD_USE_NVTX)
+if(USE_NVTX) # Option from parent scope
+    target_compile_definitions(arbd_lib PRIVATE USE_NVTX)
 endif()
 
-if(ARBD_USE_NCCL) # Option from parent scope
-    target_compile_definitions(arbd_lib PRIVATE ARBD_USE_NCCL)
+if(USE_NCCL) # Option from parent scope
+    target_compile_definitions(arbd_lib PRIVATE USE_NCCL)
 endif()
 
 # --- Linking for the Library ---
 # Link libraries that arbd_lib *itself* needs for its implementation.
 # If these are only needed by the final executable, they are linked there.
-if(ARBD_USE_CUDA)
+if(USE_CUDA)
     # If libarbd uses CUDA runtime functions directly in its implementation
     # (not just in headers exposed to the executable).
     # target_link_libraries(arbd_lib PRIVATE CUDA::cudart)
     # target_link_libraries(arbd_lib PRIVATE CUDA::curand) # If random generation is part of libarbd
 endif()
 
-if(ARBD_USE_LOGGER AND ARBD_SPDLOG_TARGET) # ARBD_SPDLOG_TARGET from parent
+if(USE_LOGGER AND ARBD_SPDLOG_TARGET) # ARBD_SPDLOG_TARGET from parent
     # If libarbd's implementation uses spdlog.
     # If spdlog is header-only, linking might just be about include directories,
     # which target_link_libraries can also handle for INTERFACE libraries.
@@ -73,13 +73,13 @@ if(ARBD_USE_LOGGER AND ARBD_SPDLOG_TARGET) # ARBD_SPDLOG_TARGET from parent
     endif()
 endif()
 
-# if(ARBD_USE_NVTX)
+# if(USE_NVTX)
 #   target_link_libraries(arbd_lib PRIVATE CUDA::nvToolsExt)
 # endif()
 
-# if(ARBD_USE_NCCL AND NCCL_FOUND) # NCCL_FOUND from parent
+# if(USE_NCCL AND NCCL_FOUND) # NCCL_FOUND from parent
 #   target_link_libraries(arbd_lib PRIVATE NCCL::nccl)
-# elif(ARBD_USE_NCCL)
+# elif(USE_NCCL)
 #   target_link_libraries(arbd_lib PRIVATE nccl) # Fallback
 # endif()
 
