add Exception and update CMake list

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,21 +10,21 @@ target_sources(arbd_lib PRIVATE
     # Core C++ files for initial modernization
     "ARBDException.h"
     "ARBDException.cpp"
-    "Core/Common.h"
-    "Core/SignalManager.h" 
-    "Core/SignalManager.cpp"
-    "Core/TypeName.h" 
+    "Common.h"
+    "SignalManager.h" 
+    "SignalManager.cpp"
+    "TypeName.h" 
 
-    #"Core/Types.h"
-    #"Core/Types/Array.h"
-    #"Core/Types/Bitmask.h"
-    #"Core/Types/Matrix3.h"
-    #"Core/Types/Vector3.h"
-    #"Core/MemoryManager.h"
-    #"Core/Proxy.h"
-    #"Core/Backend/GPU/CudaMemory.h"
-    #"Core/Backend/Resource.h"
-    #"Core/Backend/GPU/GPUManager.h"
+    #"Types.h"
+    #"Array.h"
+    #"Bitmask.h"
+    #"Matrix3.h"
+    #"Vector3.h"
+    #"MemoryManager.h"
+    #"Proxy.h"
+    #"Backend/GPU/CudaMemory.h"
+    #"Backend/Resource.h"
+    #"Backend/GPU/GPUManager.h"
 
 )
 
