--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,15 +3,24 @@ cmake_minimum_required(VERSION 3.25 FATAL_ERROR)
 
 # option(USE_CUDA "Use CUDA" ON)
 set(USE_CUDA ON)
-
-
 set(USE_MPI OFF)
 
-## specify the C++ standard
+
+# Add CUDA if enabled
+if(USE_CUDA)
+    enable_language(CUDA)
+endif()
+
+# Use target_compile_features instead of setting standards directly
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
-set(CMAKE_CUDA_STANDARD 20)
-set(CMAKE_CUDA_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+if(USE_CUDA)
+    set(CMAKE_CUDA_STANDARD 20)
+    set(CMAKE_CUDA_STANDARD_REQUIRED ON)
+    set(CMAKE_CUDA_EXTENSIONS OFF)
+endif()
 
 # Set a default build type if none was specified
 set(default_build_type "Release")
